# peregrine

./: license.md  readme.md
.VSCodeCounter/2025-03-29_21-19-18/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
peregrine/: Cargo.toml  build.rs
peregrine/assets/blender/: tank.blend  tank.blend1
peregrine/assets/gimp/: tank.xcf
peregrine/assets/panels/: metal.mtl
peregrine/assets/parts/: battery.mtl  box.mtl  fuel-cell.mtl  placement.mtl  scaffold.mtl  tank-body.mtl  tank-cap.mtl  tank.blend  tank.blend1  tank.mtl  thruster.mtl
peregrine/assets/parts-old/: fuel-cell.mtl
peregrine/shaders/: shader.wgsl
peregrine/src/: main.rs
peregrine/src/dev/: normal.rs
peregrine/src/shaders/: shader.wgsl  shader_2d.wgsl  shader_3d.wgsl  shader_placement.wgsl  shader_solid.wgsl
peregrine/src/ship/: attachment.rs  circuit.rs  grid.rs  mod.rs  orientation.rs  panel.rs  part.rs  part_grid.rs  part_loader.rs  parts.rs
peregrine/src/ui/: connections.rs  fps.rs  mod.rs  place_connection.rs  place_panel.rs  place_part.rs  place_tools.rs  placement.rs
peregrine/src/util/: mod.rs  save.rs
tethys/: Cargo.toml
tethys-proc/: Cargo.toml
tethys-proc/src/: lib.rs
tethys/src/: lib.rs
tethys/src/graphics/: camera.rs  mod.rs  model.rs  model_loading.rs  object.rs  primitives.rs  render_pass.rs  shader.rs
tethys/src/graphics/model/: container.rs  loading.rs  material.rs  mesh.rs  mod.rs  texture.rs
tethys/src/io/: key.rs  mod.rs  mouse.rs
tethys/src/physics/: collisions.rs  mod.rs
tethys/src/physics/collisions/: collision_box.rs  collision_grid.rs  collision_line.rs  collision_tree.rs  mod.rs  report.rs
tethys/src/util/: mod.rs  tree.rs
