[package]
name = "peregrine"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tethys = { path = "../tethys" }
anyhow = "1.0.86"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
cgmath = "0.18.0"
clap = { version = "4.5.11", features = ["derive"] }
image = "0.25.2"
ndarray = "0.15"
ndarray-interp = "0.4.1"
num-traits = "0.2.19"
rand = "0.8.5"
env_logger = "0.11.3"
log = "0.4"
tethys = { path = "../tethys" }
strum = { version = "0.26.3", features = ["derive"] }
